--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,7 +1,7 @@
 <div class="header-background">
     <p class="nav-text">Travel</p>
         <ul class="nav-list">
-            <li><a href="#" class="link-style">Home</a></li>
+            <li><a href="../index.html" class="link-style">Home</a></li>
             <li><a href="#" class="link-style">About</a></li>
             <li><a href="#" class="link-style">Destination</a></li>
             <li><a href="#" class="link-style">Services</a></li>
